# docx-skill

./: LICENSE  README.md  SKILL.md
.claude-plugin/: plugin.json
lib/: pyproject.toml
lib/docx_builder/: __init__.py  brand.py  builder.py  fonts.py  markdown_parser.py
lib/tests/: test_brand.py  test_builder.py  test_fonts.py  test_integration.py  test_markdown_parser.py
references/: brand-extraction.md
skills/docx-builder/: SKILL.md
skills/docx-builder/references/: layouts.md
skills/docx-skill/: SKILL.md
skills/docx-skill/references/: writing-quality.md
